updated index page by mering with about me page

--- a/styles.scss
+++ b/styles.scss
@@ -4061,3 +4061,17 @@ label.panel-close:hover {
 .border {
 	border: solid;
 }
+
+.project-img {
+	max-height: 100px;
+	width: auto;
+}
+
+.picture {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: auto;
+	max-height: 300px;
+
+}
