--- a/styles.scss
+++ b/styles.scss
@@ -19,14 +19,14 @@ $font-stack: 'Open Sans', sans-serif, helvetica;
 $font-size: calc(12px + .1vw);
 $line-height: 1.4em;
 $font-size-small: calc(.5em + .1vw);
-$link-decoration: underline;
+$link-decoration: none;
 $rounded-corners:  1.3em;
 $rounded-more-corners:  1.5em;
 $font-color: #222;
 $bg-color: rgba(200,200,200,.05);
 
 /* Contextual Colors */
-$primary-color:  rgba(28,107,228,1);
+$primary-color:  rgba(28,130,228,1);
 $secondary-color: rgba(232,72,26,1);
 $info-color: rgba(206,237,252,1);
 $success-color: rgba(57,181,74,1);
@@ -3038,7 +3038,7 @@ background-color: rgba(150,150,150,.1);
 }
 
 .tbl.striped-odd tr:nth-child(odd) td {
-background-color: rgba(150,150,150,.1);
+background-color: $primary-color-25;
 }
 
 .tbl.row-hover tr:hover > td,
@@ -3140,6 +3140,7 @@ font-size: calc(11px + .2vw);
 }
 
 .logo {
+	margin-top: 3px;
 	height: 40px;
 }
 
@@ -3948,7 +3949,7 @@ header .navbar nav#topMenuNav2 {
 
 .panel-header {
 	padding: 0 10px 0px 10px;
-	background-color: rgba(150,150,150,.2);
+	background-color: $primary-color-50;
 	min-height: 40px;
 	line-height: 40px;
 	position: relative;
@@ -4012,7 +4013,6 @@ label.panel-close {
 	cursor: pointer;
 }
 
-
 label.panel-close i.arrow-down {
 	margin-bottom: 2px;
 	margin-left: 2px;
@@ -4033,10 +4033,6 @@ label.panel-close:hover {
 	transform: rotate(135deg);
 	transition: all .1s ease-in-out;
 }
-
-
-
-
 
 @media all and (max-width: 400px) {
 
@@ -4063,8 +4059,12 @@ label.panel-close:hover {
 }
 
 .project-img {
-	max-height: 100px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 	width: auto;
+	max-height: 100px;
+	margin-bottom: 0px;
 }
 
 .picture {
