--- a/styles.scss
+++ b/styles.scss
@@ -5049,3 +5049,12 @@ label.panel-close:hover {
 .open {
 	display : none;
 }
+
+img[src*="#blogimg"] {
+	border-style: solid;
+    border-color: red;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 200px;
+    max-width: auto;
+}
