--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4071,17 +4071,12 @@ color: green;
 
 // @import 'forms';
 
-/* CSS Component Imports */
-// @import 'components/nav-menu';
-/*** Main Nav ***/
-
 .navbar {
 height: 62px;
 background-color: rgba(255,255,255,.9);
 border-top: 1px solid  rgba(255,255,255,1);
 border-bottom: 1px solid  rgba(255,255,255,1);
 }
-
 
 .navbar > div {
 position: relative;
@@ -4099,8 +4094,9 @@ font-size: calc(11px + .2vw);
 }
 
 .logo {
-	margin-top: 3px;
+	margin-top: 5px;
 	height: 40px;
+	width: 70px;
 }
 
 .navbar .logo a {
@@ -4112,9 +4108,7 @@ display: inline-block;
 }
 
 .flag {
-	margin-top: 3px;
-	height: 40px;
-	float: right;
+	margin-top: 5px;
 }
 
 .navbar-links {
@@ -4150,7 +4144,6 @@ width: 0;
 height:0;
 clear: both;
 }
-
 
 .navbar .text-right > .navbar-links {
 width: auto;
@@ -4271,6 +4264,10 @@ top: 18px;
 	margin: auto;
 	padding: 0;
 	text-align: center;
+}
+
+.navbar .flag {
+	margin: auto;
 }
 
 .mobile-menu {
@@ -4572,10 +4569,6 @@ nav.text-right {
 header .navbar nav#topMenuNav,
 header .navbar nav#topMenuNav2 {
 	width: 49.5%;
-}
-
-.flag {
-	margin-top: 1px;
 }
 
 }
