--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4259,11 +4259,11 @@ top: 18px;
 }
 
 .navbar .logo {
+
 	display: inline-block;
-	float: none;
+	float: right;
 	margin: auto;
 	padding: 0;
-	text-align: center;
 }
 
 .navbar .flag {
@@ -4275,7 +4275,7 @@ top: 18px;
 	height: 50px;
 	width: 50px;
 	position: absolute;
-	z-index:51;
+	z-index: 51;
 	top: 0;
 	left: 0;
 	cursor: pointer;
